Ju Hun Lee> Class StudentUnitRecordManager bug fix: Method invokes inefficient Number constructor, Method allocates a boxed primitive just to call toString